--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@cloudinary/url-gen": "^1.8.6",
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/raleway": "^0.2.2",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
