--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-heroicons": "^3.1.0",
     "react-native-htmlview": "^0.16.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-maps": "0.31.1",
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-render-html": "^6.3.4",
