--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/graphql": "^14.5.0",
     "@types/react-native-dotenv": "^0.2.0",
+    "add": "^2.0.6",
     "apollo-boost": "^0.4.9",
     "expo": "~46.0.9",
     "expo-app-loading": "^2.1.0",
@@ -45,7 +46,7 @@
     "react-native-heroicons": "^3.1.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-zoom-viewer": "^3.0.1",
-    "react-native-maps": "0.31.1",
+    "react-native-maps": "1.3.2",
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.3.1",
@@ -53,7 +54,8 @@
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "11.23.0"
+    "react-native-webview": "11.23.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
