--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
