--- a/package.json
+++ b/package.json
@@ -43,18 +43,22 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-heroicons": "^3.1.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-maps": "1.3.2",
     "react-native-pell-rich-editor": "^1.8.8",
+    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated-carousel": "^3.1.5",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "11.23.0",
+    "react-native-webview": "^11.24.0",
+    "react-native-youtube-iframe": "^2.2.2",
     "subscriptions-transport-ws": "^0.11.0",
     "yarn": "^1.22.19"
   },
