--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "./index.ts",
   "scripts": {
-    "start": " expo start ",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "generate": "graphql-codegen --config codegen.yml",
     "gen": "graphql-codegen --config codegen.yml"
@@ -27,10 +27,13 @@
     "apollo-boost": "^0.4.9",
     "expo": "~46.0.9",
     "expo-app-loading": "^2.1.0",
+    "expo-clipboard": "~3.1.0",
+    "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.0",
     "expo-image-picker": "~13.3.1",
     "expo-navigation-bar": "~1.3.0",
     "expo-secure-store": "~11.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
     "graphql": "^15.8.0",
@@ -43,6 +46,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-dotenv": "^3.3.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-heroicons": "^3.1.0",
     "react-native-htmlview": "^0.16.0",
