--- a/package.json
+++ b/package.json
@@ -25,56 +25,56 @@
     "@types/react-native-dotenv": "^0.2.0",
     "add": "^2.0.6",
     "apollo-boost": "^0.4.9",
-    "expo": "~46.0.9",
-    "expo-app-loading": "^2.1.0",
-    "expo-clipboard": "~3.1.0",
-    "expo-dev-client": "~1.3.1",
-    "expo-font": "~10.2.0",
-    "expo-image-picker": "~13.3.1",
-    "expo-navigation-bar": "~1.3.0",
-    "expo-secure-store": "~11.3.0",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.6",
+    "expo": "^47.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-clipboard": "~4.0.1",
+    "expo-dev-client": "~2.0.1",
+    "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
+    "expo-navigation-bar": "~2.0.1",
+    "expo-secure-store": "~12.0.0",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
-    "lottie-react-native": "5.1.3",
+    "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "native-base": "^3.4.18",
     "nativewind": "^2.0.10",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-dotenv": "^3.3.1",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-heroicons": "^3.1.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-maps": "1.3.2",
     "react-native-pell-rich-editor": "^1.8.8",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.3.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "^11.24.0",
+    "react-native-webview": "11.23.1",
     "react-native-youtube-iframe": "^2.2.2",
     "subscriptions-transport-ws": "^0.11.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.19.3",
     "@graphql-codegen/cli": "2.12.1",
     "@graphql-codegen/typescript": "2.7.3",
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/react": "~18.0.0",
-    "@types/react-native": "~0.69.1",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "babel-plugin-module-resolver": "^4.1.0",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
