--- a/eas.json
+++ b/eas.json
@@ -10,6 +10,10 @@
     "preview": {
       "distribution": "internal"
     },
+    "simulator": {
+      "ios": {
+        "simulator": true
+      }
     "production": {}
   },
   "submit": {
