--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-native-dotenv": "^0.2.0",
     "add": "^2.0.6",
     "apollo-boost": "^0.4.9",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "expo": "^47.0.0",
     "expo-app-loading": "~2.1.1",
     "expo-clipboard": "~4.0.1",
